fixes card alignment

--- a/game-stock-ui/src/app/games-view/games-view.component.css
+++ b/game-stock-ui/src/app/games-view/games-view.component.css
@@ -1,5 +1,8 @@
 .example-card {
     max-width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
 .container {
@@ -11,3 +14,4 @@
 mat-card {
     margin: 10px;
 }
+
